# finance-tracker

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  opencode.json
.codex/skills/autonomous-sdd/: SKILL.md
.cursor/skills/autonomous-sdd/: SKILL.md
.opencode/agents/: openspec-reviewer.md
.opencode/skills/autonomous-sdd/: SKILL.md
.opencode/skills/openspec-workflow/: SKILL.md
backend/: AGENTS.md  Dockerfile  pyproject.toml  requirements.txt  specs.md
backend/app/: __init__.py  config.py  database.py  default_categories.py  main.py  seed_data.py
backend/app/models/: __init__.py  domain_entities.py
backend/app/repositories/: __init__.py  base_repository.py  credit_card_repo.py  finance_repo.py
backend/app/routers/: __init__.py  credit_cards.py  metrics_gateway.py  statements.py
backend/app/schemas/: __init__.py  credit_card.py  data_transfer.py  statement_ingestion.py
backend/app/services/: __init__.py  analytics_engine.py  credit_card_agent.py  credit_card_analytics.py  credit_card_ingestion.py  statement_agent.py  statement_ingestion.py
backend/tests/: test_analytics_engine.py  test_credit_cards.py  test_default_categories.py  test_statement_ingestion.py
frontend/: .gitignore  AGENTS.md  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: creditCards.test.ts  creditCards.ts  dashboard.test.ts  dashboard.ts
frontend/src/components/: CreditCardDashboard.test.tsx  (+11 more)
(+92 files in other folders)
