[project]
name = "finance-tracker-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "pydantic-ai-slim[openai]>=2.2.0",
    "python-multipart==0.0.20",
    "SQLAlchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
    "pdfplumber==0.11.10",
    "pypdfium2>=5.9.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "ruff==0.8.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
